Fix ASGI loading order for Django Channels

--- a/home/templates/results.html
+++ b/home/templates/results.html
@@ -207,7 +207,7 @@
                     </div>
 
                     <div class="card-body">
-                        <p class="compat-score">{{ m.distance }}% Match</p>
+                        <p class="compat-score">{{ compatibility }}% Match</p>
 
                         <a class="btn-main" href="{% url 'chat_view' m.user.username %}">
                             Chat Now
